--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <link href="./output.css" rel="stylesheet">
+    <link href="./src/output.css" rel="stylesheet">
 </head>
 
 <body class="w-screen h-screen  flex items-center justify-center  bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
@@ -29,7 +29,7 @@
             <div class="mt-3">
                 <button class=" font-semibold shadow shadow-gray-200 h-12 w-64 bg-blue-500 rounded-md text-gray-800 hover:bg-gray-400 "> Login</button>
                 <p class=" cursor-pointer font-semibold text-center text-cyan-500 hover:text-cyan-800 mt-8">Me Mantenha Conectado</p>
-                <img  class="w-5 h-5 -mt-5"  src="./facebook.png">
+                <img  class="w-5 h-5 -mt-5"  src="./src/facebook.png">
         </div>
 
     </div>
