--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -10,24 +10,25 @@
 
 <body class="w-screen h-screen  flex items-center justify-center  bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
 
-    <div class=" bg-gray-200 p-10 rounded-lg h-4/5 shadow-lg shadow-gray-400" >
+    <div class=" bg-gray-300 p-10 rounded-lg h-4/5 shadow-lg shadow-gray-400 dark:bg-gray-900" >
 
-        <div>
-            <h2 class="text-black text-center mb-4  text-4xl font-semibold font-serif">Instagram</h2>
+        <div class="-mt-5">
+            <button id="button-dark" class="border border-gray-700 p-2 -ml-9 rounded-md bg-gray-600">💡</button>
+            <h2 class="text-black text-center mb-4  text-4xl font-semibold font-serif dark:text-white">Instagram</h2>
         </div>
 
         <div>
             <form class="flex flex-col justify-center gap-4">
-                <input class="h-12 w-64 pl-3 shadow shadow-gray-200 bg-gray-400 text-gray-900 rounded-md cursor-pointer placeholder:text-gray-700 placeholder:pl-3 hover:bg-gray-300" type="text" id="username" placeholder="Usuário ou Email" />
+                <input class="h-12 w-64 pl-3 shadow shadow-gray-200 bg-gray-400 text-gray-900 rounded-md cursor-pointer placeholder:text-gray-700  placeholder:pl-3 hover:bg-gray-300" type="text" id="username" placeholder="Usuário ou Email" />
                 <input class="h-12 w-64 pl-3 shadow shadow-gray-200 bg-gray-400 text-gray-900 rounded-md cursor-pointer placeholder:text-gray-700 placeholder:pl-3 hover:bg-gray-300" type="password" id="senha" placeholder="Senha" />
                 <input  class="h-5 align-middle mr-56 mt-8"  type="checkbox"> 
-                <a class="font-semibold ml-10 -mt-9" href="#" onclick="login()">Lembrar Senha</a>
+                <a class="font-semibold ml-10 -mt-9 dark:text-white" href="#" onclick="login()">Lembrar Senha</a>
             </form>
         </div>
 
 
             <div class="mt-3">
-                <button class=" font-semibold shadow shadow-gray-200 h-12 w-64 bg-blue-500 rounded-md text-gray-800 hover:bg-gray-400 "> Login</button>
+                <button class=" font-semibold shadow shadow-gray-200 h-12 w-64 bg-blue-500 rounded-md text-gray-800 hover:bg-gray-400 border-none "> Login</button>
                 <p class=" cursor-pointer font-semibold text-center text-cyan-500 hover:text-cyan-800 mt-8">Me Mantenha Conectado</p>
                 <img  class="w-5 h-5 -mt-5"  src="./src/facebook.png">
         </div>
@@ -35,5 +36,25 @@
     </div>
 
 </body>
+<script>
+
+const buttondarkmode = document.querySelector('#button-dark');
+const htmlelement = document.querySelector('html');
+
+buttondarkmode.addEventListener('click', function () {
+    darkMode();
+});
+
+function darkMode() {
+    if (htmlelement.classList.contains("dark")) {
+        htmlelement.classList.remove("dark");
+    } else {
+        htmlelement.classList.add("dark");
+    }
+}
+
+</script>
+
+
 
 </html>
